tests/syntax_error/missing_import_keyword.jou
from "stdlib.io.jou" printf  # Error: expected the 'import' keyword, got variable name 'printf'
